--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "preact-intersection-observer",
-  "version": "1.0.1",
-  "description": "",
+  "version": "1.0.2",
+  "description": "Lightweight observer made for Preact, less than 0.5kb minified!",
   "main": "dist/index.js",
   "homepage": "https://github.com/HenrikDK2/preact-intersection-observer",
   "bugs": "https://github.com/HenrikDK2/preact-intersection-observer/issues",
