--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "preact-intersection-observer",
-  "version": "2.0.0",
+  "version": "2.0.2",
   "description": "Lightweight observer made for Preact, less than 0.5kb minified!",
   "main": "dist/index.js",
   "homepage": "https://github.com/HenrikDK2/preact-intersection-observer",
   "bugs": "https://github.com/HenrikDK2/preact-intersection-observer/issues",
   "scripts": {
-    "build": "npx eslint ./src/index.tsx && rollup -c"
+    "build": "npx eslint ./src/index.tsx && rollup -c",
+    "start": "parcel example/index.html --out-dir example/dist"
   },
   "keywords": [
     "preact",
@@ -20,14 +21,15 @@
   "author": "Henrik Mundt Milo",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^18.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
-    "eslint": "^8.19.0",
+    "@types/node": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0",
     "eslint-config-preact": "^1.3.0",
     "eslint-plugin-react": "^7.30.1",
     "jest": "^28.1.3",
-    "rollup": "^2.76.0",
+    "parcel-bundler": "^1.12.5",
+    "rollup": "^2.77.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.32.1",
     "typescript": "^4.7.4"
