--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "example/**/*"],
   "compilerOptions": {
     "declaration": true,
     "outDir": "dist",
