--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "preact-intersection-observer",
-  "version": "2.1.3",
-  "description": "Lightweight observer made for Preact, less than 1kb minified!",
+  "version": "2.1.4",
+  "description": "A lightweight Preact hooks implementation of Intersection Observer API",
   "main": "dist/index.js",
   "homepage": "https://github.com/HenrikDK2/preact-intersection-observer",
   "bugs": "https://github.com/HenrikDK2/preact-intersection-observer/issues",
