--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "bugs": "https://github.com/HenrikDK2/preact-intersection-observer/issues",
   "scripts": {
     "build": "npx eslint ./src/index.tsx && rollup -c",
-    "start": "parcel example/index.html --out-dir example/dist"
+    "start": "parcel example/index.html --out-dir example/dist",
+    "gzip": "echo \"gzip size: 0.$(gzip -c ./dist/index.js | wc -c)kb\""
   },
   "keywords": [
     "preact",
