--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "homepage": "https://github.com/HenrikDK2/preact-intersection-observer",
   "bugs": "https://github.com/HenrikDK2/preact-intersection-observer/issues",
+  "type": "module",
   "scripts": {
     "build": "npx eslint ./src/index.tsx && rollup -c",
     "start": "parcel example/index.html --out-dir example/dist",
@@ -31,18 +32,18 @@
   "author": "Henrik Mundt Milo",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
-    "eslint": "^8.20.0",
+    "@rollup/plugin-terser": "^0.1.0",
+    "@rollup/plugin-typescript": "^10.0.1",
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "eslint": "^8.28.0",
     "eslint-config-preact": "^1.3.0",
-    "eslint-plugin-react": "^7.30.1",
-    "jest": "^28.1.3",
+    "eslint-plugin-react": "^7.31.11",
+    "jest": "^29.3.1",
     "parcel-bundler": "^1.12.5",
-    "rollup": "^2.77.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.32.1",
-    "typescript": "^4.7.4"
+    "rollup": "^3.5.0",
+    "typescript": "^4.9.3"
   },
   "peerDependencies": {
     "preact": "10.x"
