--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "bugs": "https://github.com/HenrikDK2/preact-intersection-observer/issues",
   "type": "module",
   "scripts": {
-    "build": "npx eslint ./src/index.tsx && rollup -c",
+    "build": "tsc",
     "start": "parcel example/index.html --out-dir example/dist",
     "gzip": "echo \"gzip size: 0.$(gzip -c ./dist/index.js | wc -c)kb\""
   },
@@ -28,12 +28,10 @@
     "useIntersectionObserver",
     "lazy load"
   ],
-  "types": "dist/src/index.d.ts",
+  "types": "dist/index.d.ts",
   "author": "Henrik Mundt Milo",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-terser": "^0.1.0",
-    "@rollup/plugin-typescript": "^10.0.1",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
@@ -42,7 +40,6 @@
     "eslint-plugin-react": "^7.31.11",
     "jest": "^29.3.1",
     "parcel-bundler": "^1.12.5",
-    "rollup": "^3.5.0",
     "typescript": "^4.9.3"
   },
   "peerDependencies": {
