--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "preact-intersection-observer",
-  "version": "2.2.7",
+  "version": "2.2.8",
   "description": "A lightweight Preact hooks implementation of Intersection Observer API",
   "main": "dist/index.js",
   "homepage": "https://github.com/HenrikDK2/preact-intersection-observer",
   "bugs": "https://github.com/HenrikDK2/preact-intersection-observer/issues",
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "parcel example/index.html --out-dir example/dist",
+    "build": "rm -rf dist && tsc",
+    "start": "npm run build && parcel example/index.html --out-dir example/dist",
     "gzip": "echo \"gzip size: 0.$(gzip -c ./dist/index.js | wc -c)kb\""
   },
   "keywords": [
@@ -32,15 +32,15 @@
   "author": "Henrik Mundt Milo",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "eslint": "^8.28.0",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "eslint": "^8.30.0",
     "eslint-config-preact": "^1.3.0",
     "eslint-plugin-react": "^7.31.11",
     "jest": "^29.3.1",
     "parcel-bundler": "^1.12.5",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.4"
   },
   "peerDependencies": {
     "preact": "10.x"
