--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "bugs": "https://github.com/HenrikDK2/preact-intersection-observer/issues",
   "type": "module",
   "scripts": {
-    "build": "rm -rf dist && tsc",
+    "build": "rm -rf dist && tsc && npm run optimize",
     "start": "npm run build && parcel example/index.html --out-dir example/dist",
+    "optimize": "terser -o dist/index.js --compress --mangle -- dist/index.js && npm run gzip",
     "gzip": "echo \"gzip size: 0.$(gzip -c ./dist/index.js | wc -c)kb\""
   },
   "keywords": [
@@ -37,9 +38,9 @@
     "@typescript-eslint/parser": "^5.48.2",
     "eslint": "^8.32.0",
     "eslint-config-preact": "^1.3.0",
-    "eslint-plugin-react": "^7.32.0",
-    "jest": "^29.3.1",
+    "eslint-plugin-react": "^7.32.1",
     "parcel-bundler": "^1.12.5",
+    "terser": "^5.16.1",
     "typescript": "^4.9.4"
   },
   "peerDependencies": {
