--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "bugs": "https://github.com/HenrikDK2/preact-intersection-observer/issues",
   "type": "module",
   "scripts": {
-    "build": "rm -rf dist && tsc && node optimize.mjs",
+    "build": "node build.mjs",
     "start": "parcel example/index.html --out-dir example/dist"
   },
   "keywords": [
@@ -40,6 +40,7 @@
     "eslint-plugin-react": "^7.32.1",
     "gzip-size": "^7.0.0",
     "parcel-bundler": "^1.12.5",
+    "shx": "^0.3.4",
     "terser": "^5.16.1",
     "typescript": "^4.9.4"
   },
