--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "bugs": "https://github.com/HenrikDK2/preact-intersection-observer/issues",
   "type": "module",
   "scripts": {
-    "build": "node build.mjs",
+    "build": "eslint ./src && node build.mjs",
     "start": "parcel example/index.html --out-dir example/dist"
   },
   "prettier": {
@@ -43,6 +43,7 @@
     "eslint-config-preact": "^1.3.0",
     "eslint-plugin-react": "^7.32.1",
     "gzip-size": "^7.0.0",
+    "jest": "^29.3.1",
     "parcel-bundler": "^1.12.5",
     "prettier": "2.8.3",
     "shx": "^0.3.4",
