--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 19
-      - run: npm run ci
+      - run: npm ci
       - run: npm run build
