--- a/.npmignore
+++ b/.npmignore
@@ -1,14 +1,5 @@
-node_modules
-README.md
-rollup.config.js
-tsconfig.json
-src
-!dist/src
-example
-.cache
-.gitignore
-.eslintrc.js
-.eslintrc.cjs
-.npmignore
-*.tgz
-build.mjs 
+*
+!/dist/**
+!LICENSE
+!README.md
+!package.json
