--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "preact-intersection-observer",
-  "version": "2.3.4",
-  "description": "A lightweight Preact hooks implementation of Intersection Observer API",
+  "version": "2.3.5",
+  "description": "A lightweight Preact implementation of Intersection Observer API",
   "main": "dist/index.js",
   "homepage": "https://github.com/HenrikDK2/preact-intersection-observer",
   "bugs": "https://github.com/HenrikDK2/preact-intersection-observer/issues",
